--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Gemunu+Libre:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Roboto', sans-serif;
+  background: #f6f6f6;
 }
 
 a {
@@ -13,4 +16,18 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif !important;
+}
+*:focus {
+  box-shadow: none !important;
+}
+button {
+  text-decoration: none !important;
+}
+.sidebarAvatar img {
+  object-position: 0px -6px;
+}
+
+.socialLinks {
+  margin: 0px 5px;
 }
